**** Don't forget to update the version in version.cl ****

v1.0
2006-09-25  Ahmon Dancy  <dancy@dancy>

	* Added version.cl
	* Makefile: Added RPM support.
	* mailfilter.spec: New

2005-12-25  Kevin Layer  <layer@relay.known.net>

	* mailstatus.cl: print something other than " " when there is
	  nothing to report... so we know mailstatus didn't crash.

2005-12-21  Kevin Layer  <layer@relay.known.net>

	* mailstatus.cl: make sure there is some output if there is no
	  mail and no inboxes... this ensures that the previous status
	  line will be cleared.

2005-12-19  Kevin Layer  <layer@relay.known.net>

	* Makefile: use mlisp at home and /fi/cl/8.0/bin/mlisp at work
	* subs.cl: handle the incompatible fasl file error once and for
	  all!

2005-06-10  Kevin Layer  <layer@gemini>

	* incfilter.cl: fix broken format string (in the debug case only)

2005-06-10  Ahmon Dancy  <dancy@dancy>

	* sub.cl: Added with-timeout around dispatched-to-p and
	bh-appended-p so that they signal an error if the transaction
	takes more than *http-timeout* (default 15) seconds.
	* incfilter.cl: Catch all unhandled errors and report them as
	"inc: <error message>".  The mh-e stuff expects error messages to
	be prefixed with "inc:".


2004-12-17  Kevin Layer  <layer@gemini>

	* subs.cl:
	- remove last few match-regexp's in favor of match-re
	- clean msgid before sending it in http query

2004-11-30  Kevin Layer  <layer@gemini>

	* Makefile: add cvs id
	* folderfilter.cl: use new regexp
	* incfilter.cl: -d to give backtrace if an error occurs
	* load.cl: load :shell and :regexp2 modules
	* mailstatus.cl: backtrace on error (if -d); use new regexp
	* subs.cl: use new regexp

2004-09-28  Kevin Layer  <layer@gemini>

	* Makefile: `install': save current version to ``.old''
	* subs.cl:
	- minor cleanup to defclassification (use macrolet for
	  subject-match and class-match)
	- add case-fold keyword to `match'
	- ignore case in address-matches-p

2004-06-12  Ahmon Dancy  <dancy@dancy>
